# yatr

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  yatr.schema.json  yatr.toml
.github/workflows/: ci.yml  docs.yml
benches/: README.md  bench.sh
crates/yatr-plugin/: Cargo.toml  README.md
crates/yatr-plugin/src/: lib.rs
docs/: STRATEGY.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  benchmarks.md  caching.md  cli.md  editor.md  installation.md  introduction.md  monorepo.md  plugins.md  remote-cache.md  tasks.md  toolchains.md
landing/: vercel.json
src/: cache.rs  cli.rs  config.rs  error.rs  executor.rs  graph.rs  lib.rs  main.rs  reapi.rs  remote.rs  script.rs  trace.rs  wasm.rs  watch.rs
tests/: cli.rs
