[workspace]
members = ["crates/yatr-plugin"]

[package]
name = "yatr"
version = "0.6.2"
edition = "2021"
authors = ["Pete"]
description = "Yet Another Task Runner - a modern, fast task runner for Rust projects"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cargopete/yatr"
keywords = ["task-runner", "build", "automation", "developer-tools"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env", "wrap_help"] }

# Config parsing
toml = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"          # JSON Schema generation for yatr.toml

# Language server (editor diagnostics + symbols for yatr.toml)
lsp-server = "0.7"
lsp-types = "0.97"

# Scripting (Rhai - fast startup, Rust-native)
rhai = { version = "1.25.1", features = ["sync", "serde"] }

# Async runtime & parallel execution
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# File watching
notify = "8"
notify-debouncer-mini = "0.7"

# Caching & hashing
blake3 = "1"
sha2 = "0.10"             # SHA-256 for REAPI (bazel-remote) cache interop
directories = "6"

# Remote cache (HTTP client; rustls to avoid a system OpenSSL dependency)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# WASM plugin runtime (lightweight pure-Rust interpreter)
wasmi = "1"

# Toolchain management (download + extract pinned language runtimes)
flate2 = "1"             # gzip decoding for .tar.gz toolchain archives
tar = "0.4"              # tar extraction

# Process execution
which = "8"

# Output & logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
console = "0.16"
indicatif = "0.18"

# Error handling
thiserror = "2"
miette = { version = "7", features = ["fancy"] }

# Misc
petgraph = "0.8"          # Task dependency graph
glob = "0.3"              # Glob pattern matching for scripts
globset = "0.4"           # File pattern matching
walkdir = "2"             # Directory traversal
ignore = "0.4"            # .gitignore-aware traversal for source hashing
chrono = { version = "0.4", features = ["serde"] }  # Timestamps
once_cell = "1"           # Lazy statics
shellexpand = "3"         # Environment variable expansion

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
wiremock = "0.6"          # Mock HTTP server for remote-cache tests
wat = "1"                 # Compile WAT to wasm for plugin tests

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "yatr"
path = "src/main.rs"
